--- a/justic/views/contact-us.html
+++ b/justic/views/contact-us.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justic</title>
     <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="stylesheet" href="../styles/contact-us.css">
 </head>
 <body>
     <div id="navbar-container">
@@ -26,8 +27,60 @@
         <div id="contact-us-container">
             <h1>Contact Us</h1>
         </div>
-
     </div>
+    <div id="name-container">
+    <div id="name">
+        <h4>First Name</h4>
+        <h4>Last Name</h4>
+    </div>
+    <div id="address">
+        <h4>Email Address</h4>
+        <h4>Phone Number</h4>
+    </div>
+    <div id="sms">
+        <label for="fname"><h4>Messege</h4>:</label>
+<input type="text" id="fname" name="fname">
+    </div>
+    <div>
+        <button>SEND MESSEGE</button>
+    </div>
+    </div>
+    <div id="footer">
+        <div id="list-container">
+            <ul>
+                <li><h3>Home</h3></li>
+                <li>About us</li>
+                <li>Practice </li>
+                <li>Services</li>
+                <li>Terms</li>
+                <li>Privacy</li>
+            </ul>
+            <ul>
+                <li><h3>Practice Area</h3></li>
+                <li>About us</li>
+                <li>Practice </li>
+                <li>Services</li>
+                <li>Terms</li>
+                <li>Privacy</li>
+            </ul>
+            <ul>
+                <li><h3> Services</h3></li>
+                <li>Banking Law</li>
+                <li>Commercial Law</li>
+                <li>Corporate</li>
+                <li>Family Law</li>
+                <li>Media Law</li>
+            </ul>
+            <ul>
+                <li><h3>Contact us</h3></li>
+                 <li>Frontend Developer</li>
+                <li>bhargavadulapuram98@gmail.com</li>
+                <li>7396242454</li>
+                <li>Hyderabad</li>
+            </ul>
+        </div>
+    </div>
+</div>
     
 </body>
 </html>
