--- a/justic/views/about.html
+++ b/justic/views/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justic</title>
     <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="stylesheet" href="../styles/about.css">
+
 </head>
 <body>
     <div id="navbar-container">
@@ -26,8 +28,69 @@
         <div id="contact-us-container">
             <h1>About</h1>
         </div>
-
     </div>
-    
+    <div id="question-container">
+        <div id="question">
+        <h1>Why <span>Choose Us?</span></h1>
+        <p>Far far away, behind the word mountains, <br>
+            far from the countries Vokalia and Consonantia,<br>
+             there live the blind texts. <br>
+             Separated they live in
+              Bookmarksgrove <br>
+               right at the coast of the Semantics, a large language ocean.</p>
+        <ul>
+            <li>Far far away, behind the word</li>
+            <li>Far from the countries Vokalia</li>
+            <li>Separated they live in Bookmarksgrove</li>
+        </ul>
+        </div>
+        <div id="answer">
+           <div>
+             <h3>How To Download And Register?</h3>
+            <p>Far far away, behind the word mountains, far from the countries <br> Vokalia and Consonantia, there live the blind texts. <br>Separated they live in Bookmarksgrove right at the coast of the Semantics,<br> a large language ocean.</p>
+      </div>
+      <div>
+      <h3>-How To Create Your Paypal Account? </h3>
+            <p>Far far away, behind the word mountains,<br> far from the countries Vokalia and Consonantia, <br>there live the blind texts. Separated they live in Bookmarksgrove right <br>at the coast of the Semantics, a large language ocean</p>
+        </div>
+        <div><h3>-How To Link Your Paypal Account And Bank Account</h3>
+        <p>A small river named Duden flows by their place and <br>supplies it with the necessary regelialia. <br>It is a paradisematic country, in which roasted parts of <br>sentences fly into your mouth. Far far away,<br> behind the word mountains, far fro</p>
+        </div></div>
+    </div>
+    <div id="footer">
+        <div id="list-container">
+            <ul>
+                <li><h3>Home</h3></li>
+                <li>About us</li>
+                <li>Practice </li>
+                <li>Services</li>
+                <li>Terms</li>
+                <li>Privacy</li>
+            </ul>
+            <ul>
+                <li><h3>Practice Area</h3></li>
+                <li>About us</li>
+                <li>Practice </li>
+                <li>Services</li>
+                <li>Terms</li>
+                <li>Privacy</li>
+            </ul>
+            <ul>
+                <li><h3> Services</h3></li>
+                <li>Banking Law</li>
+                <li>Commercial Law</li>
+                <li>Corporate</li>
+                <li>Family Law</li>
+                <li>Media Law</li>
+            </ul>
+            <ul>
+                <li><h3>Contact us</h3></li>
+                 <li>Frontend Developer</li>
+                <li>bhargavadulapuram98@gmail.com</li>
+                <li>7396242454</li>
+                <li>Hyderabad</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
