--- a/justic/views/about.html
+++ b/justic/views/about.html
@@ -18,7 +18,6 @@
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="./practice-area.html">Practice Area</a></li>
-                    <li><a href="./atterneys.html">Atterneys</a></li>
                     <li><a href="./services.html">Services</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./contact-us.html">Contact us</a></li>
@@ -50,10 +49,10 @@
             <p>Far far away, behind the word mountains, far from the countries <br> Vokalia and Consonantia, there live the blind texts. <br>Separated they live in Bookmarksgrove right at the coast of the Semantics,<br> a large language ocean.</p>
       </div>
       <div>
-      <h3>-How To Create Your Paypal Account? </h3>
+      <h3>How To Create Your Paypal Account? </h3>
             <p>Far far away, behind the word mountains,<br> far from the countries Vokalia and Consonantia, <br>there live the blind texts. Separated they live in Bookmarksgrove right <br>at the coast of the Semantics, a large language ocean</p>
         </div>
-        <div><h3>-How To Link Your Paypal Account And Bank Account</h3>
+        <div><h3>How To Link Your Paypal Account And Bank Account</h3>
         <p>A small river named Duden flows by their place and <br>supplies it with the necessary regelialia. <br>It is a paradisematic country, in which roasted parts of <br>sentences fly into your mouth. Far far away,<br> behind the word mountains, far fro</p>
         </div></div>
     </div>
